# HaskellScript

./: CHANGELOG.md  HaskellScript.cabal  README.md
app/: FromHaskell.hs  Main.hs  ToJs.hs
examples/: avgWordLen.js
