cabal-version:      3.0
name:               HaskellScript
version:            0.1.0.0
-- synopsis:
-- description:
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             Hukasx0
maintainer:         hubertkasp13@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable HaskellScript
    import:           warnings
    main-is:          Main.hs
    other-modules:    FromHaskell, ToJs
    -- other-extensions:
    build-depends:    base ^>=4.17.0.0,
                      parsec ^>=3.1.15.0,
                      filepath ^>=1.4.2.2,
                      directory ^>=1.3.7.1
    hs-source-dirs:   app
    default-language: Haskell2010
